# blink

./: Cargo.toml  README.md  build.sh  flake.nix  install.sh
.github/workflows/: ci.yml  dev_build.yml  release.yml
artifacts/: blink
src/: app.rs  async_socket.rs  config.rs  error.rs  lib.rs  lock_screen.rs  main.rs  util.rs
