[package]
name = "blink-timer"
version = "2.0.0"
authors = ["Rijk van Putten <rijk@rijkvp.nl>"]
edition = "2024"
description = "Minimal break timer and notifier"
readme = "README.md"
homepage = "https://github.com/rijkvp/blink"
license = "GPL-3.0"
keywords = ["break-timer", "break", "timer", "notifier"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
ctrlc = "3.4.7"
dirs = "6.0.0"
env_logger = "0.11.8"
evdev = { version = "0.13.1", features = ["stream-trait"] }
log = "0.4.27"
notify-rust = "4.11.7"
rand = "0.9.2"
rmp-serde = "1.3.0"
rodio = { version = "0.21.1", default-features = false, features = ["playback","vorbis"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.45.0", features = ["full", "rt"] }
tokio-stream = "0.1.17"

[profile.release]
lto = true
strip = true
codegen-units = 1
