[package]
name = "blink-timer"
version = "2.1.0"
authors = ["Rijk van Putten <rijk@rijkvp.nl>"]
edition = "2024"
description = "A program that helps you to remember to take breaks (and blink your eyes) while using the computer"
readme = "README.md"
homepage = "https://github.com/rijkvp/blink"
license = "GPL-3.0"
keywords = ["break-timer", "break", "timer", "notifier"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
dirs = "6.0.0"
env_logger = "0.11.8"
evdev = { version = "0.13.2", features = ["stream-trait"] }
log = "0.4.29"
notify-rust = "4.11.7"
rand = "0.9.2"
rmp-serde = "1.3.0"
rodio = { version = "0.21.1", default-features = false, features = ["playback","vorbis"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml_ng = "0.10.0"
tokio = { version = "1.48.0", features = ["full", "rt"] }
tokio-stream = "0.1.17"

[profile.release]
lto = true
strip = true
codegen-units = 1
