[package]
name = "blink-timer"
version = "2.2.2"
authors = ["Rijk van Putten <rijk@rijkvp.nl>"]
edition = "2024"
description = "A program that helps you to remember to take breaks (and blink your eyes) while using the computer"
readme = "README.md"
homepage = "https://github.com/rijkvp/blink"
license = "GPL-3.0"
keywords = ["break-timer", "break", "timer", "notifier"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
env_logger = "0.11"
evdev = { version = "0.13", features = ["stream-trait"] }
log = "0.4"
notify-rust = "4.12"
rand = "0.10"
rmp-serde = "1.3"
rodio = { version = "0.22", default-features = false, features = ["playback","vorbis"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml_ng = "0.10"
tokio = { version = "1.50", features = ["full", "rt"] }
tokio-stream = "0.1"

[profile.release]
lto = true
strip = true
codegen-units = 1
